2006-04-24  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: init ssl layer after connection through http proxy is
	  established.

2006-04-19  Alexander V. Lukyanov <lav@yars.free.net>

	* ArgV.cc, ArgV.h: include getopt.h in the header.
	* CmdExec.cc: add defaults for session and cwd when creating CmdExec.
	* FileAccess.cc, FileAccess.h: make sure classes are inited; add port
	  argument for New method; do Connect in New.
	* Job.cc, Job.h: add WaitDone method.
	* MirrorJob.cc: no need to include getopt.h.
	* ResMgr.h, resource.cc: add class_inited static member.
	* commands.cc: move history command to lftp.cc.
	* ftpclass.cc: handle PRET errors.
	* getdate.y: use plain free.
	* lftp.cc: move history here; ClassInit's are called automatically now;
	  use Job::WaitDone.
	* log.h: add ShowNothing method.
	* example1.cc, example2.cc: fixed for new interfaces.
	* example1-cmd.cc: new example.
	* example-module1.cc: new example.

2006-04-07  Alexander V. Lukyanov <lav@yars.free.net>

	* SFtp.cc, Fish.cc: send password twice if needed, it handles the case
	  of a protected private key.

2006-04-05  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopyOutputJob.cc: don't return MOVED if nothing changed, this
	  fixes rare spinning.
	* CmdExec.cc, CmdExec.h, lftp.cc: rename top_exec to CmdExec::top;
	  add CmdExec::Exit method.
	* Job.cc: don't show status of deleted jobs.
	* commands.cc: add exit options: top, kill; accept exit code along
	  with options.

2006-03-31  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.cc: get exit_code before AtExit, so it is not changed by
	  cmd:at-exit commands.
	* Http.cc: workaround some servers' problem with size>2G.

2006-03-30  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp_ssl.cc: make scheduler run after ssl handshake - this fixes
	  ftp upload hang when the file is empty.

2006-03-15  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc, resource.cc: add mirror:dereference setting,